[package]
name = "linux_atlas"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
async-openai = "0.23.0"
dotenv = "0.15.0"
futures = "0.3.32"
gtk4 = "0.11.2"
libadwaita = "0.9.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["full"] }
webkit6 = "0.6.1"
